[package]
name = "display-mapper"
version = "0.1.0"
authors = ["Eric RH <eric.renaud.houde@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
image = "0.22.3"
imageproc = "0.19.2"
rusttype = "0.8.1"